# smart_home_app

./: .gitignore  README.md  pyproject.toml
server/: db.sqlite3
server/server/: settings.py  urls.py
server/smart_home/: admin.py  models.py  serializers.py  urls.py  views.py
server/smart_home/migrations/: 0001_initial.py  0002_alter_deviceproperties_unique_together.py  0002_rename_category_device_device_category_and_more.py  0003_alter_home_unique_together_and_more.py  0004_homedevice_roomdevice_delete_userdevice.py
server/smart_home/templates/smart_home/: home_detail.html  index.html  user_detail.html
smart_home/: app.py  authorization.py  authorization_screen.py  bottom_navigation.py  database.db  driver.py  example.py  main.py  main_api.py  main_screen.py  menu.py  server_api.py
smart_home/api/: api.py  device_api.py  home_api.py  home_devices_api.py  room_api.py  room_devices_api.py  user_api.py
smart_home/api/classes/: device_cls.py  home_cls.py  room_cls.py  user_cls.py
smart_home/api/database/: devices_sql.py  home_devices_sql.py  homes_sql.py  room_devices_sql.py  rooms_sql.py  users_sql.py
smart_home/app/: application.py  authorization_screen.py  main_screen.py
smart_home/app/database/: app_api.py  database.py  database_creation.py
