[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Evgeni121 <darevblago121@mail.ru>"]
readme = "README.md"
packages = [{include = "my_app"}]

[tool.poetry.dependencies]
python = "^3.10"
kivy = "^2.1.0"
kivymd = "^1.1.1"
pgsql = "^1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
